add classes price bug fix

--- a/portal/price/classes/display.html
+++ b/portal/price/classes/display.html
@@ -16,7 +16,7 @@
 ثبت شهریه گروهی</h3>
 <h4>با تکمیل فرم زیر و ثبت شهریه برای <a style="color :green;"> تمامی افراد فعال</a> این کلاس شهریه مورد نظر ثبت خواهد شد.</h4>
 <h4>لطفا در ثبت شهریه دقت فرمایید و حتما توضیحات لازم را در قسمت توضیحات وارد نمایید.</h4>
-<form class="ajx" method="post" >
+<form class="ajx" method="post" action="price/classes/classesid={{classesid}}" >
 	{{forms.make(form.price)}}
 </form>
 {%endif%}
