--- a/portal/classification/printlist/absence.html
+++ b/portal/classification/printlist/absence.html
@@ -22,6 +22,10 @@
 		width:140px;
 
 	}
+	.bridge
+    {
+        width: 118px;
+    }
 	tbody{
 		page-break-inside:avoid;
 		page-break-after:auto;
@@ -159,7 +163,7 @@
 				<a class="insertAbsenceApi icodadd" classificationid="{{list.classificationid}}" style="cursor:pointer;" xclass="xm10">
 				</a>
 			</td>
-			
+
 			<td class="normal-font clst bridge"><span >{{list.phone}}</span></td>
 			<td rowspan="2" class="clse">{{list.price}}</td>
 		</tr>
@@ -167,102 +171,102 @@
 			<td class="small-font system-default">نوع غیبت</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio"  classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx1" xclass="xm1" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio"  classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx1" xclass="xm1" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence"
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx1" xclass="xm1" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx1" xclass="xm1" xcolor="#baf5ba" value="leave" xval="leave" title="مرخصی">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx1" xclass="xm1" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">		
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx1" xclass="xm1" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">
 				</div>
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx2" xclass="xm2" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx2" xclass="xm2" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence"
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx2" xclass="xm2" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx2" xclass="xm2" xcolor="#baf5ba" value="leave" xval="leave" title="مرخصی">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx2" xclass="xm2" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">		
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx2" xclass="xm2" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">
 				</div>
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx3" xclass="xm3" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx3" xclass="xm3" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence"
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx3" xclass="xm3" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx3" xclass="xm3" xcolor="#baf5ba" value="leave" xval="leave" title="مرخصی">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx3" xclass="xm3" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">		
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx3" xclass="xm3" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">
 				</div>
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx4" xclass="xm4" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx4" xclass="xm4" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence"
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx4" xclass="xm4" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx4" xclass="xm4" xcolor="#baf5ba" value="leave" xval="leave" title="مرخصی">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx4" xclass="xm4" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">		
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx4" xclass="xm4" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">
 				</div>
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx5" xclass="xm5" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx5" xclass="xm5" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence"
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx5" xclass="xm5" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx5" xclass="xm5" xcolor="#baf5ba" value="leave" xval="leave" title="مرخصی">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx5" xclass="xm5" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">		
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx5" xclass="xm5" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">
 				</div>
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx6" xclass="xm6" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx6" xclass="xm6" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence"
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx6" xclass="xm6" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx6" xclass="xm6" xcolor="#baf5ba" value="leave" xval="leave" title="مرخصی">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx6" xclass="xm6" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">		
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx6" xclass="xm6" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">
 				</div>
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx7" xclass="xm7" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx7" xclass="xm7" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence"
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx7" xclass="xm7" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx7" xclass="xm7" xcolor="#baf5ba" value="leave" xval="leave" title="مرخصی">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx7" xclass="xm7" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">		
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx7" xclass="xm7" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">
 				</div>
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx8" xclass="xm8" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx8" xclass="xm8" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence"
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx8" xclass="xm8" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx8" xclass="xm8" xcolor="#baf5ba" value="leave" xval="leave" title="مرخصی">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx8" xclass="xm8" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">		
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx8" xclass="xm8" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">
 				</div>
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx9" xclass="xm9" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx9" xclass="xm9" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence"
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx9" xclass="xm9" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx9" xclass="xm9" xcolor="#baf5ba" value="leave" xval="leave" title="مرخصی">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx9" xclass="xm9" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">		
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx9" xclass="xm9" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">
 				</div>
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx10" xclass="xm10" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx10" xclass="xm10" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence"
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx10" xclass="xm10" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx10" xclass="xm10" xcolor="#baf5ba" value="leave" xval="leave" title="مرخصی">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx10" xclass="xm10" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">		
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx10" xclass="xm10" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">
 				</div>
 			</td>
 			<td class="normal-font bridge"><span>{{list.mobile}}</span></td>
@@ -273,7 +277,7 @@
 
 <script type="text/javascript">
 $(document).ready(function(){
-	
+
 	// $("a.unjustifiedabsence").click(function(){
 	// 	$(".divGroup").each(function(){
 	// 		$("input:radio", this).removeAttr("checked");
@@ -281,14 +285,14 @@ $(document).ready(function(){
 	// 		$("input:radio", this).eq(0).attr("checked", "checked");
 	// 	});
 	// });
-	
+
 	// $("a.justifiedabsence").click(function(){
 	// 	$(".divGroup").each(function(){
 	// 		$("input:radio", this).removeAttr("checked");
 	// 		$("input:radio", this).eq(1).attr("checked", "checked");
 	// 	});
 	// });
-	
+
 	// $("a.leave").click(function(){
 	// 	$(".divGroup").each(function(){
 	// 		$("input:radio", this).removeAttr("checked");
@@ -301,7 +305,7 @@ $(document).ready(function(){
 	// 		$("input:radio", this).eq(3).attr("checked", "checked");
 	// 	});
 	// });
-	
+
 	$("input[type=radio]").click(function(){
 		// $(this).cl
 		$(this).parents("td").css("background-color", $(this).attr("xcolor"));
@@ -313,7 +317,7 @@ $(document).ready(function(){
 			if(x1 == x2){
 				$(this).attr("type", $(_self).val());
 			}
-			
+
 		});
 
 	});
@@ -367,17 +371,17 @@ $(document).ready(function(){
 		if(typeof date == "undefined") {
 			xhr_error("تاریخ انتخاب نشده است");
 			return false;
-		}	
+		}
 
 		classification = $(_self).attr("classificationid");
-		
+
 		date = convert_date(date);
 		type = $(this).attr("type");
 
 		if(typeof type == "undefined"){
 			type = "unjustified absence";
 		}
-		
+
 		xurl = "absence/api/classification=" + classification + "/date=" + date + "/type=" + type;
 
 		if($(_self).hasClass("insertAbsenceApi")){
@@ -385,7 +389,7 @@ $(document).ready(function(){
 				type: "POST",
 				url : xurl,
 				success : function(data){
-					
+
 					xhr_result(data);
 					if(data.fatal){
 						$(_self).removeClass("icodadd insertAbsenceApi").addClass("icoredclose deleteAbsenceApi");
@@ -393,7 +397,7 @@ $(document).ready(function(){
 						$(_self).removeClass("icodadd insertAbsenceApi").addClass("icoredclose deleteAbsenceApi");
 					}
 				}
-			});		
+			});
 
 		}else if($(_self).hasClass("deleteAbsenceApi")){
 			$.ajax({
@@ -407,11 +411,11 @@ $(document).ready(function(){
 						$(_self).removeClass("icoredclose deleteAbsenceApi").addClass("icodadd insertAbsenceApi");
 					}
 				}
-			});	
+			});
 		}
 		return false;
-	});	
+	});
 
-	
+
 });
 </script>
