--- a/portal/classification/printlist/defaultList.html
+++ b/portal/classification/printlist/defaultList.html
@@ -22,6 +22,11 @@
 		width:140px;
 
 	}
+
+	.bridge
+	{
+		width: 118px;
+	}
 	tbody{
 		page-break-inside:avoid;
 		page-break-after:auto;
@@ -75,21 +80,21 @@
 	</tr>
 	<tr>
 		<td class="small-font">تاریخ</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
-		<td class="small-font">&nbsp;&nbsp;&nbsp;&nbsp;/ &nbsp;&nbsp;&nbsp;&nbsp;</td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
+		<td class="small-font"></td>
 	</tr>
 	<!-- end of header -->
 	<!-- record -->
