show plan progress bug fix

--- a/portal/classification/report/display.html
+++ b/portal/classification/report/display.html
@@ -148,6 +148,8 @@
 	<tr><td class="first-td" colspan="2"><h5>وضعیت ورودی و خروجی کلاس</h5></td></tr>
 	<tr><td class="first-td">تعداد ورودی</td><td>{{intro}} نفر</td></tr>
 	<tr><td class="first-td">تعداد انصرافی</td><td>{{exit_class}} نفر</td></tr>
+	<tr><td class="first-td">تعداد انتقالی از این کلاس</td><td>{{move_classification}} نفر</td></tr>
+
 	<tr><td class="first-td">تعداد افراد باقیمانده در پایان کلاس</td><td>{{end_class}} نفر</td></tr>
 	<tr><td class="first-td">درصد باقیمانده در کلاس</td><td>
 	<div style="width: {{end_class_100}}%;	border-radius: 5px;	background-color: #59C5C5;">{{end_class_100}} ٪</div></td></tr>
