--- a/portal/report/plan/progress/display.html
+++ b/portal/report/plan/progress/display.html
@@ -44,6 +44,9 @@ function show_chart(type = '')
 	<a onclick="show_chart()">نمودار خطی</a>
 	<a onclick="show_chart('column')">نمودار میله ای</a>
 	<a onclick="show_chart('area')">نمودار منطقه ای</a>
+
+	<a href="report/plan/progress/id={{plan_id}}/type=all">نمودار تمامی کلاس ها</a>
+	<a href="report/plan/progress/id={{plan_id}}">نمودار کلاس های فعال</a>
 </div>
 <!-- <dir style="font-family:'WYekan'">نمایش بر خط نتایج مسابقه</dir> -->
 <dir id="title">
